# LoI

./: README.md
code/: CMakeLists.txt  Constants.cpp  Constants.h  Generate.cpp  Generate.h  Initial.cpp  Initial.h  Mcmc.cpp  Mcmc.h  README.md  main.cpp  mvnorm.cpp  mvnorm.h  normalPdf.cpp  normalPdf.h  normalPdfVec.cpp  normalPdfVec.h  rbeta.cpp  rbeta.h
